--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "async": "= 0.1.22",
         "sprintf": "= 0.1.1",
         "logmagic": "= 0.1.4",
-        "rackspace-shared-utils": "0.1.17",
+        "rackspace-shared-utils": ">= 0.1.17",
         "keystone-client": ">= 0.3.0"
     },
     "devDependencies": {
